// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.content - value[0] 1`] = `
<footer
  className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
  id="areas.content"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</footer>
`;

exports[`Render default - value[0] 1`] = `
<footer
  className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},null]} hide-on-print"
  id="default"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</footer>
`;

exports[`Render properties.style - value[0] 1`] = `
<footer
  className="ant-layout-footer {\\"style\\":[{\\"margin\\":\\"auto\\"},{\\"border\\":\\"1px solid blue\\"}]} hide-on-print"
  id="properties.style"
>
  <div
    style={
      Object {
        "border": "1px solid red",
        "padding": 10,
      }
    }
  >
    content
  </div>
</footer>
`;

exports[`Test Schema areas.content 1`] = `true`;

exports[`Test Schema areas.content 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
